--- a/app/styles.css
+++ b/app/styles.css
@@ -5,6 +5,12 @@
     background: #FAFAFA;
     font-family: Arial, sans-serif;
     max-width: 100%;
+    -ms-overflow-style: none;
+  }
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  ::-webkit-scrollbar {
+    display: none;
   }
 
 
@@ -269,8 +275,50 @@
   }
 
 
+  .contactFormContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
 
+  .contactForm {
+    padding: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 80vw;
+  }
 
+  input {
+    padding: 5px;
+    margin: 15px;
+    min-width: 200px;
+  }
+
+  .inputFieldType1 {
+    width: 45%;
+    max-width: 45vw;
+    height: 30px;
+  }
+
+  .inputFieldType2 {
+    width: 100%;
+    height: 30px;
+  }
+
+  input[type="submit"] {
+    width: 100%;
+    height: 50px;
+    background-color: forestgreen;
+  }
+
+  .messageBodyInput {
+    padding: 5px;
+    margin: 15px;
+    width: 100%;
+  }
 
 
   /* **************** HEADER TRANSITIONS AND ANIMATIONS **************** */
@@ -343,21 +391,27 @@
   }
 
   .header-content.hide li #header2 {
-    animation: hideHeaderListMiddle 1s;
+    animation: hideHeaderList2 1s;
   }
 
-  .header-content.hide li #header3 {
-    animation: hideHeaderListMiddle 1s;
-  }
-
-
-  @keyframes hideHeaderListMiddle {
+  @keyframes hideHeaderList2 {
     0% {opacity: 1;}
     25% {opacity: .2;}
     50% {opacity: 0;}
     100% {opacity: 0;}
   }
 
+  .header-content.hide li #header3 {
+    animation: hideHeaderList3 1s;
+  }
+
+
+  @keyframes hideHeaderList3 {
+    0% {opacity: 1;}
+    25% {opacity: .3;}
+    50% {opacity: 0;}
+    100% {opacity: 0;}
+  }
 
   .header-content.hide li #header4 {
     animation: hideHeaderList4 1s;
@@ -366,6 +420,17 @@
   @keyframes hideHeaderList4 {
     0% {opacity: 1;}
     25% {opacity: .4;}
+    50% {opacity: .1;}
+    100% {opacity: 0;}
+  }
+  
+  .header-content.hide li #header5 {
+    animation: hideHeaderList5 1s;
+  }
+
+  @keyframes hideHeaderList5 {
+    0% {opacity: 1;}
+    25% {opacity: .5;}
     50% {opacity: .1;}
     100% {opacity: 0;}
   }
@@ -414,7 +479,19 @@
     100% {opacity: 1;}
   }
   
+
+  .header-content.reveal li #header5 {
+    animation: revealHeaderItem5 1s;
+  }
+
+  @keyframes revealHeaderItem5 {
+    0% {opacity: 0;}
+    25% {opacity: .1;}
+    50% {opacity: .4;}
+    100% {opacity: 1;}
+  }
   
+
 
 
 
