--- a/app/styles.css
+++ b/app/styles.css
@@ -128,7 +128,7 @@
     text-align: left;
     padding-left: 4vw;
     margin-top: 0px !important;
-    font-size: 2em;
+    font-size: 21.5m;
   }
 
 
@@ -176,7 +176,7 @@
     font-size: 4vmin;
     padding-bottom: 5vh;
     padding-left: 5vw;
-    margin-top: 15vh;
+    margin-top: 10vh;
     padding-right: 5vw;
   }
 
@@ -686,7 +686,7 @@
     margin-left: 1vw;
     margin-right: 1vw;
     margin-top: 0px !important;
-    font-size: 2em;
+    font-size: 1.5em;
   }
 
 
@@ -737,10 +737,10 @@
   .headerSubText {
     text-align: center;
     padding: 0;
-    margin-left: 5vw;
-    margin-right: 5vw;
+    margin-left: 1vw;
+    margin-right: 1vw;
     margin-top: 0px !important;
-    font-size: 2em;
+    font-size: 1.5em;
   }
 
 
@@ -763,7 +763,7 @@
 
   
     .frontPageTextBoxHeader {
-      height: 15vh;
+      height: 30vh;
       min-height: 130px;
       padding-left: 5vw;
       padding-right: 60vw;
