--- a/app/header.css
+++ b/app/header.css
@@ -58,6 +58,30 @@
     display: block;
   }
 
+  .menu-title {
+    outline: none !important;
+    position: fixed;
+    color: #CCC;
+    height: 10vh;
+    font-size: 5vh;
+    top: 0vh;
+    margin: 0;
+    line-height: 10vh;
+    left: 15vw;
+    z-index: 4;
+  }
+
+  .menu-button {
+    outline: none !important;
+    position: fixed;
+    top: 0;
+    padding-top: 3.5vh;
+    height: 10vh;
+    padding-right: 1vw;
+    right: 15px;
+    z-index: 4;
+
+  }
 
 
   /* **************** TRANSITIONS AND ANIMATIONS **************** */
@@ -232,3 +256,15 @@
   
 
 
+@media only screen and (max-device-width : 500px) {
+    .menu-title {
+        font-size: 3vh;
+        }
+}
+
+
+@media only screen and (min-device-width : 501px) and (max-device-width : 767px) {
+.menu-title {
+    font-size: 4vh;
+    }
+}        
