--- a/app/imageAnimations.css
+++ b/app/imageAnimations.css
@@ -53,7 +53,7 @@
 
 
 .imageCaptionContainerLeft {
-    display: flex;
+    /* display: flex;
     align-items: center;
     min-height: 35%;
     max-height: 35vh;
@@ -68,12 +68,26 @@
     bottom: 5vh;    
     right: 8vw;
     box-shadow: -5px 5px 8px 0px #5f5f5f;
+    height: auto; */
+    display: flex;
+    align-items: center;
+    z-index: -1;
+    contain: content;
+    padding: 5vh;
+    color: honeydew;
+    position: relative;
+    background-color: grey;
+    width: 70vw;
+    min-width: 250px;
+    bottom: 5vh;
+    right: 8vw;
+    box-shadow: -5px 5px 8px 0px #5f5f5f;
     height: auto;
 }
 
 
 .imageCaptionContainerRight {
-    display: flex;
+    /* display: flex;
     align-items: center;
     min-height: 35%;
     max-height: 40vh;
@@ -89,29 +103,49 @@
     left: 10vw;
     box-shadow: -5px 5px 8px 0px #5f5f5f;
     height: auto;
+    margin-left: 5vw; */
+    left: 10vw;
+    height: auto;
     margin-left: 5vw;
+    display: flex;
+    align-items: center;
+    z-index: -1;
+    contain: content;
+    padding: 5vh;
+    color: honeydew;
+    position: relative;
+    background-color: grey;
+    width: 70vw;
+    min-width: 250px;
+    bottom: 5vh;
+    right: 8vw;
+    box-shadow: -5px 5px 8px 0px #5f5f5f;
+    height: auto;
 }
 
+.imgClass {
+    height: 100%;
+    width: auto;
+}
 
 .spacerGif {
     min-width: 15vw;
     position: relative;
 }
 
-.headerImgRight {
-    height: 35vh;
+.headerImg {
     width: auto;
-    max-width: 75vw;
-    margin-left: 25vw;
     box-shadow: -6px 3px 16px 0px grey;
+    height: 35vh;
+    max-width: 50vw;
+}
+
+.headerImgRight {
+    /* margin-left: 25vw; */
 }
 
 .headerImgLeft {
-    height: 65%;
-    width: auto;
-    max-width: 85vw;
-    margin-right: 20vw;
-    box-shadow: -6px 3px 16px 0px grey;
+    /* margin-right: 20vw; */
 }
 
 #nerveMuseumSignImgContainer > .headerImgLeft {
@@ -143,6 +177,13 @@
     font-size: x-large;
 }
 
+.imageContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    height: 100%;
+  }
 
 .imageCaptionContainerRight > .imageCaptionText {
     font-size: x-large;
