--- a/app/styles.css
+++ b/app/styles.css
@@ -46,7 +46,6 @@
     margin-bottom: 4vh;
   }
 
-  
 
   .frontPageCard {
     min-width: 100vw;
@@ -80,7 +79,7 @@
 
 
   .frontPageTextBoxHeader {
-    height: 30vh;
+    /* height: 30vh; */
     padding-left: 5vw;
     padding-right: 50vw;
   }
@@ -126,6 +125,12 @@
     padding-right: 5vw;
   }
 
+  .collapsibleListsContainer {
+    font-size: 3vmin;
+    padding-bottom: 15vh;
+    padding-left: 5vw;
+    padding-right: 5vw;
+  }
 
 
   @keyframes pullOutCard {
@@ -305,6 +310,7 @@
     justify-content: space-evenly;
     align-items: stretch;
     margin-top: 10vh;
+    color: #FFF;
   }
 
   .memoirImageHolder {
@@ -510,6 +516,7 @@
 
   .memoirDescriptionContainer {
     font-size: medium;
+    color: #FFF;
     width: 60vw;
     padding: 50px;
   }
@@ -605,9 +612,9 @@
 
     .memoirCover {
       border-radius: 25px;
-      min-width: 25vw;
-      min-height: 55vh;
-      max-width: 30vw;
+      /* min-width: 45vh; */
+      min-height: 50vh;
+      /* max-width: 40vh; */
       max-height: 60vh;
       position: absolute;
       top: 40vh;
@@ -660,9 +667,9 @@
 
   .memoirCover {
     border-radius: 25px;
-    min-width: 25vw;
+    /* min-width: 45vh; */
     min-height: 55vh;
-    max-width: 30vw;
+    /* max-width: 30vw; */
     max-height: 60vh;
     position: absolute;
     top: 40vh;
