--- a/app/styles.css
+++ b/app/styles.css
@@ -1,63 +1,64 @@
+html,
+body {
+  padding: 0;
+  margin: 0;
+  background: #fafafa;
+  font-family: "Courier New", Courier, monospace;
+  max-width: 100%;
+  -ms-overflow-style: none;
+}
 
-  html, body {
-    padding: 0;
-    margin: 0;
-    background: #FAFAFA;
-    font-family: 'Courier New', Courier, monospace;
-    max-width: 100%;
-    -ms-overflow-style: none;
-  }
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  display: none;
+}
 
-  /* Hide scrollbar for Chrome, Safari and Opera */
-  ::-webkit-scrollbar {
-    display: none;
-  }
+.stop-scrolling {
+  height: 100%;
+  overflow: hidden;
+}
 
+p {
+  text-indent: 20px;
+}
 
-  .stop-scrolling {
-    height: 100%;
-    overflow: hidden;
-  }
+.parallax {
+  background-image: url(../images/nerve_museum_sign.jpg);
+  height: 70vh;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 115vw 75vh;
+  background-position-y: top;
+}
 
-  p {
-    text-indent: 20px;;
-  }
-  
+.titleImg {
+  min-height: 50vh;
+  max-height: 65vh;
+  min-width: 100vw;
+}
 
-  .parallax { 
-    background-image: url(../images/nerve_museum_sign.jpg);
-    height: 70vh;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 115vw 75vh;
-    background-position-y: top;
-  }
+.imgDescription {
+  margin-bottom: 4vh;
+}
 
+.galleryCard {
+  min-width: 100vw;
+  height: 60vh;
+  border: 1px solid rgba(0, 0, 0, 1);
+  border-radius: 10px;
+  box-shadow: 3px 3px 10px grey;
+  display: inline-block;
+  scroll-snap-align: center;
+  /* animation: pullOutCard 5s linear; */
+  /* animation-play-state: paused; */
+  background-color: #fafafa;
+}
 
-  .titleImg {
-    min-height: 50vh;
-    max-height: 65vh;
-    min-width: 100vw;
-  }
-
-
-  .imgDescription {
-    margin-bottom: 4vh;
-  }
-
-
-  .frontPageCard {
-    min-width: 100vw;
-    height: 60vh;
-    border: 1px solid rgba(0, 0, 0, 1);
-    border-radius: 10px;
-    box-shadow: 3px 3px 10px grey;
-    display: inline-block;
-    scroll-snap-align: center;
-    /* animation: pullOutCard 5s linear; */
-    /* animation-play-state: paused; */
-    background-color: #FAFAFA;
+.galleryCard div:hover {
+  /* Toggle our animation play state to running when we are hovering over our sticker */
+  /* animation-play-state: running; */
+  background-color: rgba(197, 228, 253, 0.6);
 }
 
 .spacer {
@@ -70,169 +71,188 @@
   justify-content: center;
 }
 
+.frontPageTextBoxHeader {
+  /* height: 30vh; */
+  padding-left: 5vw;
+  padding-right: 50vw;
+}
 
-  .frontPageCard div:hover {
-    /* Toggle our animation play state to running when we are hovering over our sticker */
-    /* animation-play-state: running; */
-    background-color: red;
+.headerText {
+  padding-top: 12vh;
+  text-align: left;
+  padding-left: 0vw;
+  margin-top: 0px !important;
+  font-size: 3.5em;
+  margin-bottom: 10px;
+}
+
+.headerSubText {
+  text-align: left;
+  margin-top: 0px !important;
+  font-size: 2em;
+}
+
+.header__menu-toggle {
+  background: none;
+  border: none;
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  margin: 0;
+  color: #fff;
+}
+
+button {
+  outline: none !important;
+}
+
+.frontPageTextBox {
+  font-size: 3vmin;
+  padding-bottom: 5vh;
+  padding-left: 5vw;
+  margin-top: 15vh;
+  padding-right: 5vw;
+}
+
+.collapsibleListsContainer {
+  font-size: 3vmin;
+  padding-bottom: 15vh;
+  padding-left: 5vw;
+  padding-right: 5vw;
+}
+
+@keyframes pullOutCard {
+  0% {
+    transform: scale(1);
   }
-
-
-  .frontPageTextBoxHeader {
-    /* height: 30vh; */
-    padding-left: 5vw;
-    padding-right: 50vw;
+  100% {
+    transform: scale(2);
   }
+}
 
+.cardGallery {
+  position: relative;
+  width: 100vw;
+  padding: 0 10;
+}
 
-  .headerText {
-    padding-top: 12vh;
-    text-align: left;
-    padding-left: 0vw;
-    margin-top: 0px !important;
-    font-size: 3.5em;
-    margin-bottom: 10px;
-  }
+.cardGallery .btn {
+  position: absolute;
 
-  .headerSubText {
-    text-align: left;
-    margin-top: 0px !important;
-    font-size: 2em;
-  }
+  top: 50%;
+  transform: translateY(-50%);
 
+  height: 30px;
+  width: 30px;
 
+  border-radius: 2px;
+  background-color: rgba(0, 0, 0, 0.5);
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
 
-  .header__menu-toggle {
-    background: none;
-    border: none;
-    width: 24px;
-    height: 24px;
-    padding: 0;
-    margin: 0;
-    color: #FFF;
-  }
+  z-index: 1;
+}
 
-  button {
-    outline: none !important;
-  }
+.cardGallery .btn.next {
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg width="18" height="18" viewBox="0 0 34 34" xmlns="http://www.w3.org/2000/svg"><title>Shape</title><path d="M25.557 14.7L13.818 2.961 16.8 0l16.8 16.8-16.8 16.8-2.961-2.961L25.557 18.9H0v-4.2z" fill="%23FFF" fill-rule="evenodd"/></svg>');
+  right: 10px;
+}
 
+.cardGallery .btn.prev {
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg width="18" height="18" viewBox="0 0 34 34" xmlns="http://www.w3.org/2000/svg"><title>Shape</title><path d="M33.6 14.7H8.043L19.782 2.961 16.8 0 0 16.8l16.8 16.8 2.961-2.961L8.043 18.9H33.6z" fill="%23FFF" fill-rule="evenodd"/></svg>');
+  left: 10px;
+}
 
-  .frontPageTextBox {
-    font-size: 3vmin;
-    padding-bottom: 5vh;
-    padding-left: 5vw;
-    margin-top: 15vh;
-    padding-right: 5vw;
-  }
+.cardContainer {
+  display: flex;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  background-color: lightgray;
+  border: black;
+  border-width: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 1);
+  border-bottom: 1px solid rgba(0, 0, 0, 1);
+  box-shadow: inset 0px 0px 20px 0px grey;
+  overflow-y: hidden;
+}
 
-  .collapsibleListsContainer {
-    font-size: 3vmin;
-    padding-bottom: 15vh;
-    padding-left: 5vw;
-    padding-right: 5vw;
-  }
+.cardImageContainer {
+  overflow: hidden;
+  height: 60vh;
+}
 
+.cardImage {
+  width: 100vw;
+  min-height: 225px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
 
-  @keyframes pullOutCard {
-    0% { transform: scale(1); }
-    100% { transform: scale(2); }
-  }
+.cardFooter {
+  border-top: 1px solid #333;
+  width: 100%;
+  height: 100%;
+  background-color: #fafafa;
+  opacity: 0.6;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-  .cardContainer {
-    display: flex;
-    overflow-x: scroll;
-    scroll-snap-type: x mandatory;
-    background-color: lightgray;
-    border: black;
-    border-width: 2px;
-    border-top: 1px solid rgba(0, 0, 0, 1);
-    border-bottom: 1px solid rgba(0, 0, 0, 1);
-    box-shadow: inset 0px 0px 20px 0px grey;
-    overflow-y: hidden;
-  }
+.cardContent {
+  padding: 10vw;
+  font-size: xx-large;
+}
 
-  .cardImageContainer {
-    overflow: hidden;
-    height: 60vh;
-  }
+.avoid-clicks {
+  pointer-events: none;
+}
 
-  .cardImage {
-    width: 100vw;
-    min-height: 225px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-  }
+.footer {
+  height: 15vh;
+  background: #333;
+}
 
+.footerLinksContainer {
+  height: 100%;
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-around;
+  padding-right: 5vw;
+  padding-left: 5vw;
+  margin: 0;
+}
 
-  .cardFooter {
-    border-top: 1px solid #333;
-    width: 100%;
-    height: 100%;
-    background-color: #FAFAFA;
-    opacity: 0.6;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+.footerLinksContainer > li {
+  color: white;
+  flex-grow: 1;
+  text-align: center;
+}
 
-  .cardContent {
-    padding: 10vw;
-    font-size: xx-large;
-  }
+.footerLinksContainer li a {
+  color: white;
+  text-decoration: none; /* no underline */
+  display: block;
+}
+.borderedFooterLink {
+  border-right: 2px solid #fff;
+  padding-right: 5vw;
+  padding-left: 5vw;
+}
+#finalFooterLink {
+  padding-right: 5vw;
+  padding-left: 5vw;
+}
 
-  .avoid-clicks {
-    pointer-events: none;
-  }
+.contactFormContainer {
+  padding: 10vw;
+  width: 100%;
+}
 
-  
-
-  .footer {
-    height: 15vh;
-    background: #333;
-  }
-
-  .footerLinksContainer {
-    height: 100%;
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: center;
-    justify-content: space-around;
-    padding-right: 5vw;
-    padding-left: 5vw;
-    margin: 0;
-  }
-
-  .footerLinksContainer > li {
-    color: white;
-    flex-grow: 1;
-    text-align: center;
-  }
-
-  .footerLinksContainer li a {
-    color: white;
-    text-decoration: none; /* no underline */
-    display: block;
-  }
-  .borderedFooterLink {
-    border-right: 2px solid #fff;
-    padding-right: 5vw;
-    padding-left: 5vw;
-    
-  }
-  #finalFooterLink {
-    padding-right: 5vw;
-    padding-left: 5vw;
-  }
-
-
-  .contactFormContainer {
-    padding: 10vw;
-    width: 100%;
-  }
-
-  /* #contactForm {
+/* #contactForm {
     padding: 5%;
     display: flex;
     align-items: center;
@@ -241,212 +261,215 @@
     width: 80vw;
   } */
 
-  /* #emailContentTextField {
+/* #emailContentTextField {
     height: 25vh;
     padding: 5px;
     width: 100%;
     margin: 15px;
   } */
 
-  .formRow {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+.formRow {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.formRow > label {
+  width: 100%;
+  padding: 5px;
+  margin: 15px;
+  min-width: 200px;
+}
+
+input {
+  padding: 5px;
+  margin-left: 0px;
+  min-width: 200px;
+}
+
+.inputFieldType1 {
+  flex-grow: 2;
+  width: 38vw;
+  min-width: 250px;
+  height: 30px;
+}
+
+.inputFieldType2 {
+  width: 100%;
+  height: 30px;
+}
+
+button[type="submit"] {
+  width: 100%;
+  height: 50px;
+  background-color: forestgreen;
+}
+
+.messageBodyInput {
+  padding: 5px;
+  margin: 15px;
+  width: 100%;
+}
+
+.memoirContainer {
+  background-image: url("./images/dark_background.jpg");
+  width: 80vw;
+  min-height: 90vh;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+  padding-left: 10vw;
+  padding-right: 10vw;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: inset grey 0px 0px 5px 0px;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: stretch;
+  margin-top: 10vh;
+  color: #fff;
+}
+
+.memoirImageHolder {
+  width: 25vw;
+  padding: 10px;
+  min-width: 300px;
+}
+
+.memoirDescriptionContainer {
+  font-size: 2vmin;
+  width: 60vw;
+  padding: 50px;
+}
+
+.memoirIframe {
+  z-index: 2;
+  min-height: 90vh;
+}
+
+.workItemsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-content: space-between;
+}
+
+.workItem {
+  overflow: hidden;
+  contain: content;
+  margin: 25px;
+  width: 20vw;
+  height: 30vw;
+  min-width: 300px;
+  min-height: 450px;
+  border-radius: 5px;
+  box-shadow: #80808054 2px 2px 2px 0px;
+}
+
+.workItemImage {
+  width: auto;
+  height: 100%;
+}
+
+.workItemBlurb {
+  background-color: grey;
+  opacity: 0;
+  /* visibility: hidden; */
+  width: 20vw;
+  height: 30vw;
+  min-width: 300px;
+  min-height: 450px;
+  position: absolute;
+}
+
+.workItemBlurb:hover {
+  /* background-color: red; */
+  animation: showItemBlurb 0.5s forwards;
+}
+
+.workItemBlurb:hover + span {
+  background-color: red;
+  /* animation: showItemBlurb 1s forwards; */
+}
+
+@keyframes showItemBlurb {
+  0% {
+    opacity: 0.4;
   }
-
-  .formRow > label {
-    width: 100%;
-    padding: 5px;
-    margin: 15px;
-    min-width: 200px;
+  100% {
+    opacity: 0.8;
   }
+}
 
+.essayBlurbText {
+  height: 80%;
+  font-size: large;
+  overflow: hidden;
+  padding: 10px;
+}
 
-  input {
-    padding: 5px;
-    margin-left: 0px;
-    min-width: 200px;
+.previewInstructions {
+  font-size: x-large;
+  font-weight: bold;
+  position: absolute;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+}
+
+.previewEssay {
+  color: #333;
+  top: 0;
+  z-index: 2;
+  position: static;
+  max-height: 0vh;
+  width: 100vw;
+}
+
+.previewEssay.expand {
+  background-image: url(../images/grey_background_textured.jpg);
+  background-size: cover;
+  max-height: 100vh;
+  height: 100vh;
+  transition: max-height 0.75s ease-in;
+  display: flex;
+  flex-direction: column;
+}
+
+.closePreviewEssay {
+  height: 33px;
+  font-size: x-large;
+  margin-right: 0;
+  align-self: flex-end;
+  border: none;
+  margin: 15px;
+  background-color: rgba(0, 0, 0, 0);
+  color: white;
+}
+
+.closePreviewEssay:hover {
+  background-color: grey;
+}
+
+@keyframes blurBackground {
+  0% {
+    height: 0vh;
   }
-
-  .inputFieldType1 {
-    flex-grow: 2;
-    width: 38vw;
-    min-width: 250px;
-    height: 30px;
+  100% {
+    opacity: 100vh;
   }
+}
 
-  .inputFieldType2 {
-    width: 100%;
-    height: 30px;
-  }
-
-  button[type="submit"] {
-    width: 100%;
-    height: 50px;
-    background-color: forestgreen;
-  }
-
-  .messageBodyInput {
-    padding: 5px;
-    margin: 15px;
-    width: 100%;
-  }
-
-
-  .memoirContainer {
-    background-image: url("./images/dark_background.jpg");
-    width: 80vw;
-    height: 90vh;
-    padding-top: 5vh;
-    padding-bottom: 5vh;
-    padding-left: 10vw;
-    padding-right: 10vw;
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    box-shadow: inset grey 0px 0px 5px 0px;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: stretch;
-    margin-top: 10vh;
-    color: #FFF;
-  }
-
-  .memoirImageHolder {
-    width: 25vw;
-    padding: 10px;
-    min-width: 300px;
-
-  }
-
-  .memoirDescriptionContainer {
-    font-size: 2vmin;
-    width: 60vw;
-    padding: 50px;
-  }
-
-  .memoirIframe {
-    z-index: 2;
-  }
-
-  .workItemsContainer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-content: space-between;
-  }
-
-  .workItem {
-    overflow: hidden;
-    contain: content;
-    margin: 25px;
-    width: 20vw;
-    height: 30vw;
-    min-width: 300px;
-    min-height: 450px;
-    border-radius: 5px;
-    box-shadow: #80808054 2px 2px 2px 0px;
-  }
-
-  .workItemImage {
-    width: auto;
-    height: 100%;
-  }
-
-  .workItemBlurb {
-    background-color: grey;
-    opacity: 0;
-    /* visibility: hidden; */
-    width: 20vw;
-    height: 30vw;
-    min-width: 300px;
-    min-height: 450px;
-    position: absolute;  
-  }
-
-  .workItemBlurb:hover {
-    /* background-color: red; */
-    animation: showItemBlurb 0.5s forwards;
-  }
-
-  .workItemBlurb:hover + span {
-    background-color: red;
-    /* animation: showItemBlurb 1s forwards; */
-  }
-
-  @keyframes showItemBlurb {
-    0% {opacity: 0.4; }
-    100% {opacity: 0.8; }
-  }
-
-  .essayBlurbText {
-    height: 80%;
-    font-size: large;
-    overflow: hidden;
-    padding: 10px;
-  }
-
-  .previewInstructions {
-    font-size: x-large;
-    font-weight: bold;
-    position: absolute;
-    text-align: center;
-    bottom: 0;
-    width: 100%;
-  }
-
-  .previewEssay {
-    color: #333;
-    top: 0;
-    z-index: 2;
-    position: static;
-    max-height: 0vh;
-    width: 100vw;
-  }
-
-  .previewEssay.expand {
-    background-image: url(../images/grey_background_textured.jpg);
-    background-size: cover;
-    max-height: 100vh;
-    height: 100vh;
-    transition: max-height 0.75s ease-in;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .closePreviewEssay {
-    height: 33px;
-    font-size: x-large;
-    margin-right: 0;
-    align-self: flex-end;
-    border: none;
-    margin: 15px;
-    background-color: rgba(0, 0, 0, 0);
-    color: white;
-  }
-
-  .closePreviewEssay:hover {
-    background-color: grey;
-  }
-
-
-  @keyframes blurBackground {
-    0% {height: 0vh; }
-    100% {opacity: 100vh; }
-  }
-
-
-
-
-
-
+.profileImgContainer {
+  margin-left: auto;
+  margin-right: auto;
+}
 
 /* ************ MEDIA QUERIES ************ */
-  
-  
+
 /* Phones and Handhelds ----------- */
-@media only screen and (max-device-width : 500px) {
+@media only screen and (max-device-width: 500px) {
   .profileImg {
     width: 74vw;
     position: absolute;
@@ -455,7 +478,7 @@
     left: 13vw;
     border: 5px solid #fff;
     border-radius: 3px;
-    box-shadow: 0px -20px 20px 0px grey; 
+    box-shadow: 0px -20px 20px 0px grey;
   }
 
   .memoirCover {
@@ -476,15 +499,11 @@
     visibility: hidden;
   }
 
-
-  
   .frontPageTextBoxHeader {
     font-size: 2.5vmin;
     height: 40vh;
     padding-right: 5vw;
   }
-
-
 
   .individualWorkItems {
     padding: 0 18px;
@@ -513,10 +532,9 @@
     font-size: 1.5em;
   }
 
-
   .memoirDescriptionContainer {
     font-size: medium;
-    color: #FFF;
+    color: #fff;
     width: 60vw;
     padding: 50px;
   }
@@ -529,17 +547,15 @@
     border-right: 2px solid #fff;
     padding-right: 2vw;
     padding-left: 2vw;
-    
   }
   #finalFooterLink {
     padding-right: 2vw;
     padding-left: 2vw;
   }
-
 }
 
 /* iPads (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 501px) and (max-device-width : 767px) {
+@media only screen and (min-device-width: 501px) and (max-device-width: 767px) {
   .profileImg {
     width: 74vw;
     max-height: 55vh;
@@ -570,7 +586,7 @@
     display: none;
     visibility: hidden;
   }
-  
+
   .frontPageTextBoxHeader {
     height: 25vh;
     padding-right: 5vw;
@@ -591,67 +607,59 @@
     margin-top: 0px !important;
     font-size: 1.5em;
   }
-
-
 }
 
 /* iPads (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
-    .profileImg {
-      min-width: 40vw;
-      min-height: 35vh;
-      max-width: 50vw;
-      max-height: 50vh;
-      position: absolute;
-      top: 45vh;
-      right: 8vw;
-      border: 5px solid #fff;
-      border-radius: 3px;
-      box-shadow: 3px 3px 8px grey;
-    }
-
-    .memoirCover {
-      border-radius: 25px;
-      /* min-width: 45vh; */
-      min-height: 50vh;
-      /* max-width: 40vh; */
-      max-height: 60vh;
-      position: absolute;
-      top: 40vh;
-      right: 8vw;
-      border: 5px solid #fff;
-      border-radius: 3px;
-      box-shadow: 3px 3px 8px grey;
-    }
-  
-  
-
-    .memoirContainer {
-      height: 0px !important;
-      display: none;
-      visibility: hidden;
-    }  
-  
-    .frontPageTextBoxHeader {
-      height: 30vh;
-      min-height: 130px;
-      padding-left: 5vw;
-      padding-right: 60vw;
-    }
-
-    
-    .headerText {
-      padding-top: 12vh;
-      text-align: left;
-      padding-left: 0vw;
-      margin-top: 0px !important;
-    }
-  
-
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .profileImg {
+    min-width: 40vw;
+    min-height: 35vh;
+    max-width: 50vw;
+    max-height: 50vh;
+    position: absolute;
+    top: 45vh;
+    right: 8vw;
+    border: 5px solid #fff;
+    border-radius: 3px;
+    box-shadow: 3px 3px 8px grey;
   }
 
-  @media only screen and (min-device-width : 1025px) {
+  .memoirCover {
+    border-radius: 25px;
+    /* min-width: 45vh; */
+    min-height: 50vh;
+    /* max-width: 40vh; */
+    max-height: 60vh;
+    position: absolute;
+    top: 40vh;
+    right: 8vw;
+    border: 5px solid #fff;
+    border-radius: 3px;
+    box-shadow: 3px 3px 8px grey;
+  }
 
+  .memoirContainer {
+    height: 0px !important;
+    display: none;
+    visibility: hidden;
+  }
+
+  .frontPageTextBoxHeader {
+    height: 30vh;
+    min-height: 130px;
+    padding-left: 5vw;
+    padding-right: 60vw;
+  }
+
+  .headerText {
+    padding-top: 12vh;
+    text-align: left;
+    padding-left: 0vw;
+    margin-top: 0px !important;
+  }
+}
+
+@media only screen and (min-device-width: 1025px) {
   .profileImg {
     min-width: 35vw;
     min-height: 40vh;
@@ -678,5 +686,4 @@
     border-radius: 3px;
     box-shadow: 3px 3px 8px grey;
   }
-
 }
